# MomoScript

./: .gitignore  AGENTS.md  LICENSE  README.md  batch_tag_students.py  bot.py  edgeone.json  llm_request.py  netlify.toml  pyproject.toml
avatar/: download_errors.json  name_to_id.json
bluearchive-api-kivowiki/: README.md  download_report.json  download_report_1.json  download_report_sample.json  download_report_sample2.json  download_student_gallery_images.py  kivowiki_api.py  validate_all_students.py  validate_report.json  validate_report_sample.json
examples/: intro.mmt
mmt_core/: AGENTS.md  app.py  download_student_avatars.py  draft.md  dsl_compiler.py  dsl_parser.py  dsl_refactor_check.py  embedding_index.py  external_assets.py  kivowiki_api.py  mmt_pipeline.py  mmt_text_to_json.py  pack_v2.py  pyproject.toml  resolve_expressions.py  silicon_reranker.py  siliconflow_rerank.py  typst_sandbox.py  validate_pack_v2.py
mmt_core/dsl_fixtures/: basic.mmt.txt  custom_char_avatar.mmt.txt  custom_char_avatar.mmt.txt.golden.json  expr_direct_ref.mmt.txt  expr_direct_ref.mmt.txt.golden.json  tmpalias_scope.mmt.txt.golden.json  typst_blank_lines.mmt.txt.golden.json
mmt_lsp/: Cargo.toml
mmt_lsp/src/: lib.rs  position.rs  server.rs  service.rs  typst_backend.rs
mmt_lsp/tests/: position_domains.rs  stdio_transcript.rs  tinymist_sidecar_transcript.rs
mmt_lsp/tests/fixtures/: basic-session.json  position-domains.json
mmt_nonebot_plugin/: AGENTS.md  pyproject.toml
mmt_nonebot_plugin/nonebot_plugin_mmt_pipe/: README.md  __init__.py  assets_store.py  config.py  mmt_img.typ  mmt_imgmatch.typ
mmt_nonebot_plugin/nonebot_plugin_mmt_pipe/commands/: asset.py  mmt.py  pack.py
mmt_nonebot_plugin/nonebot_plugin_mmt_pipe/services/: README.md  common.py  core.py  img.py  io.py  mmt.py  pack.py  typst.py
mmt_nonebot_plugin/tests/: test_typst_mapping.py
mmt_packs/: README.md
mmt_render/: README.md  app.py  dsl_compiler.py  dsl_parser.py  dsl_refactor_check.py  external_assets.py  inline_expr.py  mmt.typ  mmt_format_test.json  mmt_format_test.txt  mmt_pipeline.py  mmt_render.typ  mmt_text_to_json.py  pack_v2.py  precompute_embeddings.py  resolve_expressions.py  silicon_reranker.py  siliconflow_embed.py  siliconflow_rerank.py  validate_pack_v2.py  栀子花的梦_Part1.txt
mmt_rs/: Cargo.toml  README.md  pyproject.toml
mmt_rs/src/: analysis.rs  ast.rs  compiler.rs  diag.rs  emit.rs  identity.rs  inline.rs  lib.rs  materialize.rs  pack.rs  parser.rs  pipeline.rs  project.rs  projected_edit.rs  projection.rs  resolve.rs  semantic.rs  source.rs  syntax.rs  types.rs  typst_check.rs
mmt_rs/src/semantic/: actor.rs  asset.rs  document.rs  resource.rs
mmt_rs/tests/: compile_cli.rs  pack_v3_e2e.rs  projected_edit_validator.rs  runtime_identity.rs  syntax_api.rs  typst_diagnostic_mapping.rs
mmt_rs/tests/fixtures/: runtime-identity.json
mmt_rs/tests/fixtures/avifs/: alpha-sequence.avifs  manifest.json
mmt_rs/tests/fixtures/pack-v3/: base-manifest.json  extension-manifest.json
mmt_rs/tests/fixtures/typst/: mmt-test-lib.typ
nonebot_plugin_mmt_pipe/: README.md  __init__.py  config.py  context.py  mmt_img.typ  mmt_imgmatch.typ  pack_store.py  plugin.py
openspec/: README.md  project.md
tools/: build_kivo_pack_v3.py  download_student_avatars.py  make_slideshow_av1.py  merge_pack_dirs.py  mmt_pipeline.py  precompute_embeddings.py  update_extpack_mapping.py  (+1 more)
(+1437 files in other folders)
