[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mmt-core"
version = "0.1.0"
description = "Core library for MomoScript DSL parsing and pack handling."
requires-python = ">=3.10"
license = {text = "MPL-2.0"}
dependencies = [
  "curl-cffi>=0.5.7",
  "loguru>=0.7",
  "openai"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mmt_core*"]
