[package]
name = "mmt_lsp"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Native and WebAssembly language server for the MomoScript DSL"
repository = "https://github.com/xiyihan0/MomoScript"
license-file = "../LICENSE"
publish = false

[lib]
name = "mmt_lsp"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "mmt-lsp"
path = "src/bin/mmt-lsp.rs"
required-features = ["native"]

[features]
default = ["native"]
native = ["dep:lsp-server"]

[dependencies]
lsp-types = "=0.95.0"
mmt_rs = { path = "../mmt_rs", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
lsp-server = { version = "0.8", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
