[package]
name = "mmt_rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT"
publish = false

[lib]
name = "mmt_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
typst-syntax = "0.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
