[package]
name = "mmt_rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT"
publish = false

[lib]
name = "mmt_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
typst-syntax = "0.15"
time = { version = "0.3.48", features = ["formatting", "parsing"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jiff = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
